--- a/main.tex
+++ b/main.tex
@@ -1429,7 +1429,7 @@ We now prove \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} for the
 		\GroupExtension{\algebraicGroup{G}}^{\Frobenius}}{(s)}$ is a subrepresentation of the parabolically induced representation $\Ind{H}{G}{\sigma}$ where $\sigma$ is an irreducible representation of the Levi part $L$ of $P$, then $\sigma \in \LusztigSeries{
 		\algebraicGroup{L}^{\Frobenius}}{(s)}$.
 		
-	Thus if $\pi$ is a subrepresentation of a parabolically induced representation as above, then $(T_H,\theta_H)$ is geometrically conjugate to $(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H'}, \theta_{\GL_k\left(\quadraticExtension\right)} \times \theta_{H'})$ for $T_{\GL_k\left(\quadraticExtension\right)} \times H'$ a torus of $L = \GL_k\left(\quadraticExtension\right) \times H'$. As proved in \Cref{lem:indep_geo_conj}, $$g_{T \cap G}\left(\chi,\theta\restriction_{T \cap G},\psi\right) = g_{\left(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H}'\right) \cap G}\left(\chi,\left(\theta_{\GL_k\left(\quadraticExtension\right)}\times \theta_{H'}\right)\restriction_{\left(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H'}\right) \cap G},\psi\right).$$ The right hand of the last equality is multiplicative since Gauss sums are multiplicative by \eqref{eq:Gauss_multiplicitive}.
+	Thus if $\pi$ is a subrepresentation of a parabolically induced representation as above, then $(T_H,\theta_H)$ is geometrically conjugate to $(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H'}, \theta_{\GL_k\left(\quadraticExtension\right)} \times \theta_{H'})$ for $T_{\GL_k\left(\quadraticExtension\right)} \times H'$ a torus of $L = \GL_k\left(\quadraticExtension\right) \times H'$. As proved in \Cref{lem:indep_geo_conj}, $$g_{T \cap G}\left(\chi,\theta_H\restriction_{T \cap G},\psi\right) = g_{\left(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H}'\right) \cap G}\left(\chi,\left(\theta_{\GL_k\left(\quadraticExtension\right)}\times \theta_{H'}\right)\restriction_{\left(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H'}\right) \cap G},\psi\right).$$ The right hand of the last equality is multiplicative since Gauss sums are multiplicative by \eqref{eq:Gauss_multiplicitive}.
 \end{proof}
 \begin{proof}[Proof of \eqref{item:follows-for-cuspidal}]
 By \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters} and \Cref{lem:indep_geo_conj}, we have that if $\RTThetaVirtual{T_H}{H}{\theta_H} = \sum_{\pi} c_{\pi} \pi$, where $\pi$ goes over all (equivalence classes of) irreducible representations of $H$ and $c_{\pi} \in \zIntegers$, then
