--- a/main.tex
+++ b/main.tex
@@ -1408,8 +1408,8 @@ Recall that in \Cref{lem:indep_geo_conj}, we showed that the right hand side of 
 
 The proof strategy is to prove the following inductive statements
 \begin{enumerate}[(a)]
-	\item \label{item:follows-for-non-cuspidal}If for all representations with $\dim_{\mathbb{E}} V < n$, \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} holds, then \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} holds for all non-cuspidal irreducible representations of $H$ with $\dim_{\mathbb{E}} V = n$.
-	\item \label{item:follows-for-cuspidal}If \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} holds for all non-cuspidal irreducible representations of $H$ with $\dim_{\mathbb{E}} V = n$, then it holds for all irreducible cuspidal representations of $H$ with $\dim_{\mathbb{E}} V = n$.
+	\item \label{item:follows-for-non-cuspidal}If \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} holds for all representations of $H'$ where $H'$ corresponds to $\left(\hermitianSpace', \innerproduct{\cdot}{\cdot}\right)$ with $\dim_{\quadraticExtension} V' < n$, then \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} holds for all non-cuspidal irreducible representations of $H$ with $\dim_{\mathbb{E}} V = n$.
+	\item \label{item:follows-for-cuspidal}If \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} holds for all non-cuspidal irreducible representations of $H$, then it holds for all irreducible cuspidal representations of $H$.
 \end{enumerate}
 The key input to (\ref{item:follows-for-non-cuspidal}) is the multiplicativity of the $\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter}$ factor. The key input to (\ref{item:follows-for-cuspidal}) is \Cref{lem:indep_geo_conj} along with results of Lusztig controlling the cupsidal elements in a Lusztig series.
 
@@ -1417,7 +1417,7 @@ The key input to (\ref{item:follows-for-non-cuspidal}) is the multiplicativity o
 We first reduce \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} to the case $H = \GroupExtension{G}$. We start with the following observation. Suppose that $\tilde{\pi}$ is an irreducible representation of $\GroupExtension{G}$ and that $\pi$ is an irreducible representation of $G$ that appears as a subrepresentation of the restriction of $\tilde{\pi}$ to $G$. Then since $\dblJacobiSum{\tilde{\pi}}{\chi}$ and $\dblJacobiSum{\pi}{\chi}$ are scalar operators and the restriction of $\dblJacobiSum{\tilde{\pi}}{\chi}$ to the subspace $\pi$ is $\dblJacobiSum{\pi}{\chi}$, we have that $$\dblJacobiSumScalar{\pi}{\chi} = \dblJacobiSumScalar{\tilde{\pi}}{\chi}$$ and thus
 $$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \dblGammaFactorSpace{\hermitianSpace}{\tilde{\pi}}{\chi}{\fieldCharacter}.$$
 
-Since the map $\algebraicGroup{\GroupExtension{G}}^*(\finiteField) \to \algebraicGroup{G}^*(\finiteField)$ is surjective \calvin{check this!}, by \Cref{prop:lusztig-series-and-restriction} there exists $\tilde{s}$ depending on $s$ such that for every $\pi \in \LusztigSeries{\FrobeniusFixedPoints{G}}{s}$, the exists some $\tilde{\pi} \in \LusztigSeries{\FrobeniusFixedPoints{\GroupExtension{G}}}{\tilde{s}}$ such that $\pi$ is an irreducible subrepresentation of the restriction to $G$ of $\tilde{\pi}$. It thus suffices to prove \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} for $\GroupExtension{G}$. 
+Since the map $\algebraicGroup{\GroupExtension{G}}^*(\finiteField) \to \algebraicGroup{G}^*(\finiteField)$ is surjective \calvin{check this!}, by \Cref{prop:lusztig-series-and-restriction} there exists $\tilde{s}$ depending on $s$ such that for every $\pi \in \LusztigSeries{\FrobeniusFixedPoints{G}}{s}$, there exists some $\tilde{\pi} \in \LusztigSeries{\FrobeniusFixedPoints{\GroupExtension{G}}}{\tilde{s}}$ such that $\pi$ is an irreducible subrepresentation of the restriction of $\tilde{\pi}$ to $G$. It thus suffices to prove \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} for $H = \GroupExtension{G}$. 
 
 
 We now prove \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} for the extension $\GroupExtension{G}$. Henceforth we denote $H = \GroupExtension{G}$. Our proof will be via induction as described above.
@@ -1426,8 +1426,8 @@ We now prove \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} for the
 	We will show that both sides of \eqref{eq:doubling-method-gamma-factor-is-gauss-sum-of-functorial-lift} satisfy a multiplicativity property. Since every proper parabolic subgroup of $H = \GroupExtension{G}$ is contained in a proper maximal parabolic subgroup group with Levi part of the form $L = \GL_k\left(\quadraticExtension\right) \times H'$, where $H'$ is as in \Cref{subsec:multiplicativity}, the multiplicativity of the left hand side of \eqref{eq:doubling-method-gamma-factor-is-gauss-sum-of-functorial-lift} follows from \Cref{thm:multiplicativity-in-terms-of-gamma-factors}.
 	
 	For the right hand side of \eqref{eq:doubling-method-gamma-factor-is-gauss-sum-of-functorial-lift}, first \Cref{prop:lusztig-series-are-unions-of-harish-chandra-series} tells us that if $\pi \in \LusztigSeries{
-		\GroupExtension{\algebraicGroup{G}}^{\Frobenius}}{(s)}$ is a subrepresentation of the parabolically induced representation $\Ind{H}{G}{\sigma}$ where $\sigma$ is an irreducible representation of the Levi part $L$ of $P$, then $\sigma \in \LusztigSeries{
-		\algebraicGroup{L}^{\Frobenius}}{(s)}$.
+		\GroupExtension{\algebraicGroup{G}}^{\Frobenius}}{s}$ is a subrepresentation of the parabolically induced representation $\Ind{H}{G}{\sigma}$ where $\sigma$ is an irreducible representation of the Levi part $L$ of $P$, then $\sigma \in \LusztigSeries{
+		\algebraicGroup{L}^{\Frobenius}}{s}$.
 		
 	Thus if $\pi$ is a subrepresentation of a parabolically induced representation as above, then $(T_H,\theta_H)$ is geometrically conjugate to $(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H'}, \theta_{\GL_k\left(\quadraticExtension\right)} \times \theta_{H'})$ for $T_{\GL_k\left(\quadraticExtension\right)} \times H'$ a torus of $L = \GL_k\left(\quadraticExtension\right) \times H'$. As proved in \Cref{lem:indep_geo_conj}, $$g_{T \cap G}\left(\chi,\theta_H\restriction_{T \cap G},\psi\right) = g_{\left(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H}'\right) \cap G}\left(\chi,\left(\theta_{\GL_k\left(\quadraticExtension\right)}\times \theta_{H'}\right)\restriction_{\left(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H'}\right) \cap G},\psi\right).$$ The right hand of the last equality is multiplicative since Gauss sums are multiplicative by \eqref{eq:Gauss_multiplicitive}.
 \end{proof}
