--- a/main.tex
+++ b/main.tex
@@ -1040,7 +1040,7 @@ Combining the results of the previous sections with \Cref{prop:reduction-of-gaus
 		\centralCharacter{\pi}\left(-1\right) = \theta\left(-1\right).
 	\end{align*}
 	Thus \begin{align*}
-		\dblNegVirtualJacobiSumScalar{\RTGTheta{T_H}{H}{\theta_H}}{\chi} =& \RTTheta{T_H}{H}{\theta_H}\left(1\right) c_{\hermitianSpace}\left(\chi, \fieldCharacter\right) \centralCharacter{\pi}\left(-1\right) \GaussSumTorusCharacter{T'}{\theta'}{\chi}{\fieldCharacter}.
+		\dblNegVirtualJacobiSumScalar{\RTGTheta{T_H}{H}{\theta_H}}{\chi} =& \RTGTheta{T_H}{H}{\theta_H}\left(1\right) c_{\hermitianSpace}\left(\chi, \fieldCharacter\right) \centralCharacter{\pi}\left(-1\right) \GaussSumTorusCharacter{T'}{\theta'}{\chi}{\fieldCharacter}.
 	\end{align*}
 \end{remark}
 
