Add comment about the factor \chi(2)

--- a/main.tex
+++ b/main.tex
@@ -957,7 +957,7 @@ Let $\chi \colon \multiplicativegroup{\quadraticExtension} \to \multiplicativegr
 	\chi\left(2\right) \left(-\GaussSumSingleCharacter{\chi^{-2}}{\fieldCharacter}\right)^{\frac{\dim_{\finiteField} \hermitianSpace - 1}{2}} & \quadraticExtension = \finiteField,\,\, \dim_{\finiteField} \hermitianSpace \text{ is odd,}	\\
 	\left(-\GaussSumSingleCharacter{\chi^{-1}\restriction_{\multiplicativegroup{\finiteField}}}{\fieldCharacter}\right)^{\dim_{\quadraticExtension} \hermitianSpace} & \quadraticExtension \ne \finiteField.
 \end{dcases}$$
-Notice that if $\quadraticExtension \ne \finiteField$ then by the Hasse--Davenport relation $\GaussSumSingleCharacter{\chi^{-1}\restriction_{\multiplicativegroup{\finiteField}}}{\fieldCharacter}^{2} = \GaussSumSingleCharacter{\minusInvolutionMinusOne{\chi}} {\fieldCharacter_{\quadraticExtension}}$. The factor on the left hand side appears in \Cref{thm:computation-unitary-norm-one-case}, while the one on the right hand side appears in \Cref{thm:multiplicativity-in-terms-of-gauss-sums}.
+Notice that if $\quadraticExtension \ne \finiteField$ then by the Hasse--Davenport relation $\GaussSumSingleCharacter{\chi^{-1}\restriction_{\multiplicativegroup{\finiteField}}}{\fieldCharacter}^{2} = \GaussSumSingleCharacter{\minusInvolutionMinusOne{\chi}} {\fieldCharacter_{\quadraticExtension}}$. The factor on the left hand side appears in \Cref{thm:computation-unitary-norm-one-case}, while the one on the right hand side appears in \Cref{thm:multiplicativity-in-terms-of-gauss-sums}. The factor $\chi\left(2\right)$ in the odd-dimensional special orthogonal case will be explained in the proof of \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}.
 
 For an irreducible representation $\tau$ of $\GL_k\left(\quadraticExtension\right)$ define $$\dblGammaFactor{\tau}{\chi}{\fieldCharacter} = \GaussSumScalar{\Contragradient{\tau} \times \involution{\chi}}{\fieldCharacter} \GaussSumScalar{\tau \times \chi}{\fieldCharacter}.$$
 For an irreducible representation $\pi$ of $H$, define the \emph{doubling method gamma factor} $$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \frac{\posDblJacobiSumScalar{\pi}{\chi}}{c_{\hermitianSpace}\left(\chi, \fieldCharacter\right)}.$$
