alg groups section (missing citation)

--- a/main.tex
+++ b/main.tex
@@ -350,8 +350,13 @@ We will need the following lemma that allows us to determine whether a degenerat
 
 In this section, we recall the notion of classical groups and their corresponding similitude groups. These are the main groups which we will study in this paper.
 
-\subsubsection{Algebraic groups}
+\subsubsection{Algebraic groups over finite fields}
 \elad{Tell the reader that the notation $\algebraicGroup{G}$ refers to an algebraic group, which can be thought of as the $\algebraicClosure{\finiteField}$ points of a variety over $\finiteField$ with an action of $\Frobenius$}
+Each of our classical groups $G$ in the proceeding sections are defined by polynomial equations in entries in a matrix which yield an \emph{algebraic group}-an algebraic variety with a group structure (see cite something). 
+We will denote the algebraic group by the bold $\algebraicGroup{G}$. 
+It can be thought of as its $\algebraicClosure{\finiteField}$ points together with an action of $\Frobenius$ on these points whose fixed points is $\algebraicGroup{G}(\finiteField)$. 
+Thus we will often denote $\algebraicGroup{G}(\finiteField)$ by $\algebraicGroup{G}^{\Frobenius}$ or just by the non-bold $G$.
+
 
 \subsubsection{$\epsilon$-sesquilinear spaces}
 Let $\quadraticExtension \slash \finiteField$ be a field extension of degree $1$ or $2$ contained in $\algebraicClosure{\finiteField}$. For any $k \ge 1$, let $\quadraticFieldExtension{k} \slash \quadraticExtension$ be the unique field extension of degree $k$ contained in $\algebraicClosure{\finiteField}$. Let $x \mapsto \involution{x}$ be the generator of $\Galois\left(\quadraticExtension \slash \finiteField\right)$.
