Adding reference to Digne-Michel

--- a/main.tex
+++ b/main.tex
@@ -351,11 +351,10 @@ We will need the following lemma that allows us to determine whether a degenerat
 In this section, we recall the notion of classical groups and their corresponding similitude groups. These are the main groups which we will study in this paper.
 
 \subsubsection{Algebraic groups over finite fields}
-\elad{Tell the reader that the notation $\algebraicGroup{G}$ refers to an algebraic group, which can be thought of as the $\algebraicClosure{\finiteField}$ points of a variety over $\finiteField$ with an action of $\Frobenius$}
-Each of our classical groups $G$ in the proceeding sections are defined by polynomial equations in entries in a matrix which yield an \emph{algebraic group}-an algebraic variety with a group structure (see cite something). 
-We will denote the algebraic group by the bold $\algebraicGroup{G}$. 
+Each of our classical groups $G$ in the proceeding sections are defined by polynomial equations in entries of a matrix which yield an \emph{affine algebraic group}, that is, an affine algebraic variety with a group structure (see \cite[Section 0]{DigneMichel1991}). 
+We will denote the algebraic group by the bold symbol $\algebraicGroup{G}$. 
 It can be thought of as its $\algebraicClosure{\finiteField}$ points together with an action of $\Frobenius$ on these points whose fixed points is $\algebraicGroup{G}(\finiteField)$. 
-Thus we will often denote $\algebraicGroup{G}(\finiteField)$ by $\algebraicGroup{G}^{\Frobenius}$ or just by the non-bold $G$.
+Thus we will often denote $\algebraicGroup{G}(\finiteField)$ by $\algebraicGroup{G}^{\Frobenius}$ or just by the non-bold symbol $G$.
 
 
 \subsubsection{$\epsilon$-sesquilinear spaces}
