Explaining a bit what restriction of scalars is

--- a/main.tex
+++ b/main.tex
@@ -379,6 +379,7 @@ Let $$w_n = \begin{pmatrix}
 \end{pmatrix} \in \GL_n\left(\finiteField\right)$$ be the longest Weyl element.
 \begin{enumerate}
 	\item (Unitary groups): $\quadraticExtension \ne \finiteField$. Denote $\dim_{\quadraticExtension} \hermitianSpace = n$. In this case, the group $G = \GroupExtension{G}$ is isomorphic to the group $\UnitaryGroup_n\left(\finiteField\right) \subset\GL_{n}\left(\quadraticExtension\right)$ defined as the $\finiteField$-points of $$\algebraicGroup{\UnitaryGroup}_n = \left\{ g \in \restrictionOfScalars{\quadraticExtension}{\finiteField}{\algebraicGroup{\GL}_n} \mid \involution{\left(\transpose{g}\right)} w_n g = w_n \right\}.$$
+	Here $\restrictionOfScalars{\quadraticExtension}{\finiteField} {\algebraicGroup{\GL}}_n = \algebraicGroup{\GL}_n \times \algebraicGroup{\GL}_n$, equipped with the involution $\involution{\left(g_1,g_2\right)} = \left(g_2, g_1\right)$ and the Frobenius root $\Frobenius \left(g_1, g_2\right) = \involution{\left(\Frobenius g_1, \Frobenius g_2\right)}$, and we realize $w_n$ embedded diagonally as $\left(w_n, w_n\right)$.
 	\item (Special orthogonal groups): $\quadraticExtension = \finiteField$ and $\epsilon_{\hermitianSpace} = 1$. It follows by definition that every element $g \in \IsometryGroup\left(\hermitianSpace\right)$ satisfies $\left(\det g\right)^2 = 1$.  In this case, we obtain the connected components of the identity by adding a restriction on the determinant: We have that $G$ consists of all elements $g \in \IsometryGroup\left(\hermitianSpace\right)$ with $\det g = 1$. There are two cases here.
 	\begin{enumerate}
 		\item Split case: in this case, we can write $$\hermitianSpace = \begin{dcases}
