--- a/main.tex
+++ b/main.tex
@@ -847,7 +847,7 @@ It is clear that if $\pi$ is an irreducible representation of $H$ then $$\dblVir
 Notice that the assignments $g \mapsto \posJacobiKernel{\chi}\left(g\right)$ and $g \mapsto \negJacobiKernel{\chi}\left(g\right)$ only depend on the semisimple part of $g \in H$. By \Cref{prop:semisimple_pair_with_RTtheta}, we have the following result.
 \begin{proposition}\label{prop:reduction-of-gauss-sum-to-torus}
 	For any $\Frobenius$-stable rational maximal torus $\algebraicGroup{T}_{\algebraicGroup{H}}$ of $\algebraicGroup{H}$, and any character $\theta_{H} \colon T_{H} \to \multiplicativegroup{\cComplex}$, where $T_H = \algebraicGroup{T}_{\algebraicGroup{H}}^{\Frobenius}$, we have
-	$$ \dblVirtualJacobiSumScalar{\RTTheta{T_H}{\theta_H}}{\chi} = \frac{\grpIndex{H}{T}}{\sqrt{\sizeof{\lieAlgebra}}} \sum_{t \in T_H} \theta_H\left(t\right) \genHermitianJacobiKernel{\hermitianSpace}{\chi}\left(t\right).$$
+	$$ \dblVirtualJacobiSumScalar{\RTTheta{T_H}{\theta_H}}{\chi} = \frac{\grpIndex{H}{T_H}}{\sqrt{\sizeof{\lieAlgebra}}} \sum_{t \in T_H} \theta_H\left(t\right) \genHermitianJacobiKernel{\hermitianSpace}{\chi}\left(t\right).$$
 \end{proposition}
 In the special case that $\theta_H$ is in general position, the virtual character $\varepsilon_{\algebraicGroup{H}} \varepsilon_{\algebraicGroup{T}_{\algebraicGroup{H}}} \RTTheta{T_H}{\theta_H}$ equals $\trace \pi$ for some irreducible representation $\pi$ of $H$ and we have that for this $\pi$,
 $$\dblJacobiSumScalar{\pi}{\chi} = \varepsilon_{\algebraicGroup{H}} \varepsilon_{\algebraicGroup{T}_{\algebraicGroup{H}}} \frac{\sizeof{H}_p}{\sqrt{\sizeof{\lieAlgebra}}} \sum_{t \in T_H} \theta_H\left(t\right) \genHermitianJacobiKernel{\hermitianSpace}{\chi}\left(t\right).$$
